# C-Common-Memory-Errors

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: code-syntax-style-check.yml
src/: CMakeLists.txt  app.c  invalid_frees.c  invalid_frees_exercise.c  invalid_reads.c  invalid_reads_exercise.c  invalid_writes.c  uninitialized_values.c  uninitialized_values_exercise.c
tests/: CMakeLists.txt  dummy_test.c
